Attempt to fix style layout issue in Podcast page component queue tab area

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@
 	--header-height: 60px;
 	--media-control-height: 96px;
 	--main-contents-tabs-height: 39px;
-	--main-contents-buttons-height: 52px;
+	--main-contents-buttons-height: 68px;
 	--main-content-offset: calc(var(--header-height) + var(--media-control-height));
 	--main-content-with-tabs-offset: calc(var(--header-height) + var(--media-control-height) + var(--main-contents-tabs-height));
 	--main-content-with-tabs-buttons-offset: calc(var(--header-height) + var(--media-control-height) + var(--main-contents-tabs-height) + var(--main-contents-buttons-height));
